--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: crystal
 
 crystal:
   - latest
-  - nightly
+  # - nightly
 
 script:
-  - shards install --ignore-crystal-version
   - crystal spec spec/*.spec.cr
