Fixed shards install error.

--- a/.github/workflows/ci-nightly.yml
+++ b/.github/workflows/ci-nightly.yml
@@ -20,4 +20,5 @@ jobs:
         with:
           crystal: ${{matrix.crystal}}
       - uses: actions/checkout@v2
-      -run: crystal spec --error-on-warnings --error-trace
+      - run: shards install
+      - run: crystal spec --error-on-warnings --error-trace
