--- a/.github/workflows/ci-nightly.yml
+++ b/.github/workflows/ci-nightly.yml
@@ -22,3 +22,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: shards install --ignore-crystal-version
       - run: crystal spec --error-on-warnings --error-trace
+      - run: crystal docs
