--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: shards install
       - run: crystal spec src/*.cr
+      - run: crystal docs
