--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,11 @@
-# use CircleCI 2.0
 version: 2
-jobs: # a collection of jobs
+jobs:
   build:
     working_directory: ~/skeleton
-    docker: # run build steps with docker
-      # primary docker container; all `steps` will run here.
+    docker:
       - image: crystallang/crystal:latest
-    steps: # a collection of executable steps
-      - checkout # checks out source code to working directory
-      #- restore_cache: # Restore dependency cache
-      #  key: dependency-cache-{{ checksum "shard.lock" }}
+    steps:
+      - checkout
       - run:
           name: Install dependencies.
           command: shards install
